Update 'python-app-0322' component image to: quay.io/yangcao/python-app-0322:c01b5a04f7bbc27a17f666a49b502543da9d8310@sha256:4c37c487f272bb8004d59b93e54124d02836623120a54873e7064b6dc2d2da6b

--- a/components/python-app-0322/overlays/development/deployment-patch.yaml
+++ b/components/python-app-0322/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: python-app-0322
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/yangcao/python-app-0322:c01b5a04f7bbc27a17f666a49b502543da9d8310@sha256:4c37c487f272bb8004d59b93e54124d02836623120a54873e7064b6dc2d2da6b
+          name: container-image
