--- a/components/python-app-0322/overlays/stage/deployment-patch.yaml
+++ b/components/python-app-0322/overlays/stage/deployment-patch.yaml
@@ -12,5 +12,5 @@ spec:
   template: 
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
+      - image: quay.io/yangcao/python-app-0322:c01b5a04f7bbc27a17f666a49b502543da9d8310@sha256:4c37c487f272bb8004d59b93e54124d02836623120a54873e7064b6dc2d2da6b
         name: container-image  
